tests/baselines/reference/returnType_basic.errors.txt
tests/cases/conformance/basicStructs/types_basic/returnType_basic.ts(8,1): error TS2322: Type '(n: string, a: number) => { name: string; age: number; }' is not assignable to type '(name: string, age: number) => Person':
  Type '(n: string, a: number) => { name: string; age: number; }' is not assignable to type '(name: string, age: number) => Person'.


==== tests/cases/conformance/basicStructs/types_basic/returnType_basic.ts (1 errors) ====
    struct Person {
    	constructor(public name: string, public age: number) {}
    }
    
    var p: Person;
    var test = (name: string, age: number) => new Person(name, age);
    p = test("John", 25);
    test = function (n, a) {return {name: n, age: a} }; // error, type not compatible
    ~~~~
!!! error TS2322: Type '(n: string, a: number) => { name: string; age: number; }' is not assignable to type '(name: string, age: number) => Person':
!!! error TS2322:   Type '(n: string, a: number) => { name: string; age: number; }' is not assignable to type '(name: string, age: number) => Person'.
    
    